[package]
name = "bgpkit-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bgpkit-api"
path = "src/main.rs"

[dependencies]
axum = "0.6.15"
tower-http = {version= "0.4.0", features=["cors"]}
anyhow = "1"

utoipa = {version= "3.2", features=["axum_extras"]}
utoipa-swagger-ui = {version= "3.1", features=["axum"]}

postgrest = "1.6.0"
dotenvy = "0.15.6"

tokio = {version="1", features=["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

chrono = "0.4.22"
humantime = "2.1.0"
thiserror = "1.0.37"